full changes to toy app 2

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,13 +11,10 @@ development:
   database: toy_app
   username: root
   password:
-  socket: /tmp/mysql.sock
 
 production:
-  adapter: mysql2
+  adapter: postgres
   pool: 5
   timeout: 5000
   database: toy_app
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+
